<resources>

    <string name="default_string_en">Hust Hole</string>
    <string name="default_string_zh_short">1037树洞</string>
    <string name="default_string_zh_long">1037树洞1037洞1037树洞10371037树洞1037树洞1037树洞1037树洞1037树洞1037树洞1037树洞1037树洞1037树洞1037树洞1037树洞1037树洞1037树洞1037树洞1037树洞1037树洞</string>
    <string name="default_string_number_short">1037</string>
    <string name="default_string_number_long">1037103710371037103710371037103710371037103710371037103710371037103710371037103710371037103710371037103710371037103710371037103710371037</string>

    <string name="homepage_zh">首页</string>
    <string name="hust_hole_1037_zh">1037树洞</string>
    <string name="homepage_2">叮~来自1037树洞的悄悄话！</string>
    <string name="homepage_3">知道啦</string>
    <string name="forest_zh">小树林</string>
    <string name="forest_tag">小树林标签</string>
    <string name="notification_zh">通知</string>
    <string name="mine_zh">我的</string>

    <string name="reply_count">共 %s 条回复 ></string>

    <string name="page1fragment_1">搜搜你想倾听的</string>
    <string name="page1fragment_2">树洞广场</string>
    <string name="page1fragment_3">关注</string>
    <string name="page1fragment_4">推荐</string>
    <string name="page1fragment_5">最新评论</string>
    <string name="page1fragment_6">最新发布</string>

    <string name="page3fragment_1">系统通知</string>
    <string name="page3fragment_2">还没有通知噢…</string>
    <string name="reply_to_hole">回复了你的树洞</string>
    <string name="reply_to_reply">回复了你的评论</string>
    
    <string name="publishmessage_1">发树洞</string>
    <string name="publishmessage_2">发布</string>
    <string name="publishmessage_3">来，说点什么吧</string>

    <string name="forum_1">洞主</string>
    <string name="forum_2">全部评论</string>
    

    <string name="page2fragment_1">加入的小树林</string>
    <string name="page2fragment_2">发现更多</string>


    <string name="page2_allforests_1">发现小树林</string>
    <string name="page2_allforests_2">欢迎来到小树林！</string>
    <string name="page2_allforests_3">小树林是聚集相同类型树洞的兴趣圈子。加入喜欢的小树林来倾诉你的思绪吧！</string>

    <string name="page2_detailforest_1">最新</string>

    <string name="forest_quit_notice_1">退出小树林</string>
    <string name="forest_quit_notice_2">你确认要退出小树林？</string>
    <string name="forest_quit_notice_3">取消</string>
    <string name="forest_quit_notice_4">确认</string>

    <string name="page2_applyforest_1">申请小树林</string>
    <string name="page2_applyforest_2">没有找到想要加入的小树林？来向1037树洞运营组提交你的灵感吧！在你提交申请之后的七天内，我们会评估小树林是否可以被创建，并将结果通过系统通知告诉你。通过阅读小树林公约可以提高你申请的通过率噢~</string>
    <string name="page2_applyforest_3">小树林名称</string>
    <string name="page2_applyforest_4">输入小树林名称</string>
    <string name="page2_applyforest_5">*字数超过限制，请控制在10个字以内</string>
    <string name="page2_applyforest_6">小树林简介</string>
    <string name="page2_applyforest_7">输入小树林简介</string>
    <string name="page2_applyforest_8">说明：小树林简介用于阐释小树林的定位，引导树洞内容创作方向。请用简练的语言进行描述，不超过40字。</string>
    <string name="page2_applyforest_9">*字数超过限制，请控制在40个字以内</string>
    <string name="page2_applyforest_10">小树林图标</string>
    <string name="page2_applyforest_11">小树林封面</string>
    <string name="page2_applyforest_12">添加封面图片</string>
    <string name="page2_applyforest_13">提交</string>
    <string name="no_joined_forest">还没有加入小树林噢～</string>
    <string name="no_notice">还没有通知噢…</string>
    <string name="no_reply">还没有评论噢…</string>


    <string name="commment_1">洞主</string>
    <string name="commment_2">全部评论</string>

    <string name="publishhole_1">发树洞</string>
    <string name="publishhole_2">未选择小树林</string>
    <string name="publishhole_3">发布</string>
    <string name="publishhole_4">让树洞倾听你的声音…</string>

    <string name="publishhole_popupwindow_1">选择小树林</string>
    <string name="publishhole_popupwindow_2">不选择任何小树林</string>
    <string name="publishhole_popupwindow_3">选择</string>
    <string name="publishhole_popupwindow_4">加入的小树林</string>
    <string name="publishhole_popupwindow_5">热门小树林</string>


    <string name="retrieve_password_vcode_1">输入验证码</string>
    <string name="retrieve_password_vcode_2">验证邮件已经发送至u202054321&#064;hust.edu.cn</string>
    <string name="retrieve_password_vcode_3">输入验证码</string>
    <string name="retrieve_password_vcode_4">下一步</string>
    <string name="retrieve_password_vcode_5">未收到验证码？</string>
    <string name="retrieve_password_vcode_6">50s</string>
    <string name="retrieve_password_vcode_7">后重新发送</string>
    <string name="display_password">显示密码</string>
    <string name="hide_password">隐藏密码</string>

    <string name="retrieve_password_modify_1">输入新密码</string>
    <string name="retrieve_password_modify_2">输入密码</string>
    <string name="retrieve_password_modify_3">完成</string>
    <string name="retrieve_password_modify_4">密码不合规范，需6–16个字符</string>


    <string name="network_thumbupfailure_">点赞失败，请检查网络</string>
    <string name="network_followfailure_">关注失败，请检查网络</string>
    <string name="network_searchfailure_">搜索失败，请检查网络</string>
    <string name="network_notthumbupfailure_">取消点赞失败，请检查网络</string>
    <string name="network_notfollowfailure_">取消关注失败，请检查网络</string>
    <string name="network_loadfailure">加载失败，请检查网络</string>
    <string name="network_loadeverthing">已经到底辣</string>
    <string name="network_joinfailture">加入失败，请检查网络</string>
    <string name="network_quitfailture">退出失败，请检查网络</string>
    <string name="network_sendfailture">发送失败，请检查网络</string>
    <string name="network_deletefailture">删除失败，请检查网络</string>
    <string name="network_reportfailture">举报失败，请检查网络</string>
    <string name="network_unknownfailture">未知错误</string>

    <string name="network_loginfailure">登录失败，请检查网络</string>
    <string name="network_failure">请检查网络</string>

    //我的
    <string name="mine">我的</string>
    <string name="tv_myHoles">我的树洞</string>
    <string name="tv_myFollows">我的关注</string>
    <string name="tv_myReply">我的评论</string>
    <string name="status_unaudited">审核中</string>
    <string name="status_not_approved">未通过</string>
    <string name="personal_setting">个人设置</string>
    <string name="shield_setting">屏蔽设置</string>
    <string name="community_norm">社区规范</string>
    <string name="share_hole">把树洞分享给同学</string>
    <string name="evaluation_and_suggestions">评价与建议</string>
    <string name="about_1037">关于1037树洞</string>
    <string name="update">更新</string>
    <string name="login_out">退出登录</string>
    <string name="privacy_security">隐私安全</string>
    <string name="dark_mode">深色模式</string>
    <string name="light_mode">日间模式</string>
    <string name="follow_mode">跟随系统</string>
    <string name="keyword_shielding">关键词屏蔽</string>
    <string name="update_log">更新日志</string>
    <string name="check_update">检查更新</string>
    <string name="verify_email">验证校园邮箱</string>
    <string name="hang_around">我再逛逛</string>
    <string name="norm_1037">1037树洞社区规范</string>
    <string name="update_date">更新日期：2021年3月11日</string>
    <string name="add_shield">添加屏蔽关键词</string>
    <string name="word_shielded">已屏蔽的关键词</string>
    <string name="add">添加</string>
    <string name="commit">提交</string>
    <string name="rec_hole">🙂你在多大程度上愿意向他人推荐1037树洞？</string>
    <string name="eval">评价一下</string>
    <string name="adv">给点建议</string>
    <string name="advice">建议</string>
    <string name="error">故障</string>
    <string name="others">其他</string>
    <string name="contact_way">联系我们：husthole@pivotstudio.cn</string>
    <string name="pivot_purpose">1037 树洞是面向华科学生群体， 主打情感倾诉、校园互动、兴趣交流等功能的校园产品。我们期待为华科学子打造一个自由而友善、坦率而正直的社交平台。</string>
    <string name="韵酒蛋包饭">韵酒蛋包饭</string>
    <string name="分享">分享</string>
    <string name="分享到">分享到</string>
    <string name="share_to">分享到</string>
    <string name="store">保存</string>
    <string name="校园邮箱">校园邮箱</string>
    <string name="HUST校园邮箱使用指南">HUST校园邮箱使用指南</string>
    <string name="tv_1">如果您在注册1037树洞时对HUST校园邮箱的使用方式存疑，请阅读本指南。</string>
    <string name="tv_2">一、登录华中大校园邮箱</string>
    <string name="tv_3">方法一： 每位同学在入校注册后，将会自动获得一个以学号为用户名的电子邮箱，密码缺省为考生编号后八位（即校园网密码） ，可直接用于登录华中大校园邮箱： https://mail.hust.edu.cn/</string>
    <string name="tv_4">方法二： 选择通过华中大统一身份认证登录： https://pass.hust.edu.cn/cas/login?service=https%3A%2F%2Fmail.hust.edu.cn%2Fsso%2Findex.jsp</string>
    <string name="des_mine_img">Logo of hust hole 1037</string>
    <string name="back">icon of return</string>
    <string name="purport">有时治愈 时常帮助 总是倾听</string>
    <string name="long_click_scan">长按扫码查看</string>
    <string name="save_phone">保存到手机</string>
    <string name="mobile_1037">1037树洞移动版来啦！</string>
    <string name="share_qq">分享到QQ</string>

    <string name="chip_1">1</string>
    <string name="chip_2">2</string>
    <string name="chip_3">3</string>
    <string name="chip_4">4</string>
    <string name="chip_5">5</string>
    <string name="chip_6">6</string>
    <string name="chip_7">7</string>
    <string name="chip_8">8</string>
    <string name="chip_9">9</string>
    <string name="chip_10">10</string>
    <string name="all_forest_zh">所有小树林</string>
    <string name="discover_more">发现更多</string>
    <string name="hot_tag">热评</string>

    <string name="res_network_error">糟糕！网络出问题了，请检查网络连接</string>
    <string name="res_no_search_result">暂无搜索内容</string>
    <string name="res_no_myhole">还没有发布过树洞哟~</string>
    <string name="res_no_myfollow">还没有关注过树洞哟(˘•ω•˘)</string>
    <string name="res_no_myreply">还没在树洞留下你的足迹…</string>

    <string name="download_success">下载成功！</string>
    <string name="download_failure">下载失败T^T</string>
    <string name="downloading">正在光速下载中…</string>
    <string name="download_pause">已暂停</string>
    <string name="download_cancel">取消下载</string>

    //Image contentDescription
    <string name="change_dark">强制深色模式</string>
    <string name="change_light">强制浅色模式</string>
    <string name="change_follow_system">跟随系统</string>
    <string name="QR_code">长按扫描二维码跳转对应树洞</string>
</resources>