<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homepage_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/homepage_zh" />

    <item
        android:id="@+id/forest_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_forest"
        android:title="@string/forest_zh" />

    <item
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/notice_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_msg"
        android:title="@string/notification_zh" />

    <item
        android:id="@+id/mine_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_mine"
        android:title="@string/mine_zh" />

</menu>