<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mode"
            type="int" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popupwindow"
        android:baselineAligned="false"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="@dimen/dp_15">

            <ImageView
                android:id="@+id/img_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/change_dark"
                android:src="@{mode == 2 ? @drawable/ic_dark_click : @drawable/ic_dark}"
                tools:src="@drawable/ic_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_dark"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/dark_mode"
                android:textColor="@{mode == 2 ? @color/HH_Reminder_Link : @color/GrayScale_20}"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="@dimen/dp_15">

            <ImageView
                android:id="@+id/img_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/change_light"
                android:src="@{mode == 1 ? @drawable/ic_light_click : @drawable/ic_light}"
                tools:src="@drawable/ic_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_light"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/light_mode"
                android:textColor="@{mode == 1 ? @color/HH_Reminder_Link : @color/GrayScale_20}"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_follow_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="@dimen/dp_15">

            <ImageView
                android:id="@+id/img_follow_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/change_follow_system"
                android:src="@{mode == 0 ? @drawable/ic_follow_system_click : @drawable/ic_follow_system}"
                tools:src="@drawable/ic_follow_system" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_follow_system"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/follow_mode"
                android:textColor="@{mode == 0 ? @color/HH_Reminder_Link : @color/GrayScale_20}"/>
        </RelativeLayout>


    </LinearLayout>
</layout>