<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notice"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="316dp"
        android:layout_height="144dp"
        android:layout_gravity="center"
        android:background="@drawable/notice"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_dialogforestquit_title"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:text="@string/forest_quit_notice_1"
            android:textColor="@color/GrayScale_0"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dialogforestquit_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="25dp"
            android:text="@string/forest_quit_notice_4"
            android:textColor="@color/HH_BandColor_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_dialogforestquit_notquit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:text="@string/forest_quit_notice_3"
            android:textColor="@color/HH_BandColor_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_dialogforestquit_quit" />

        <TextView
            android:id="@+id/tv_dialogforestquit_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/forest_quit_notice_2"
            android:textColor="@color/GrayScale_0"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialogforestquit_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>