<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_applyforest_send"
            android:layout_width="@dimen/dp_311"
            android:layout_height="@dimen/dp_56"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/standard_button_gray"
            android:text="@string/page2_applyforest_13"
            android:textColor="@color/GrayScale_100"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_applyforest_addicon"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_applyforest_addcover"
            android:layout_width="@dimen/dp_206"
            android:layout_height="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/add_photo_gray"
            android:drawableLeft="@mipmap/vector_2"
            android:paddingLeft="@dimen/dp_35"
            android:text="@string/page2_applyforest_12"
            android:textColor="@color/GrayScale_80"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_applyforest_covertitle"
            app:layout_constraintTop_toBottomOf="@+id/tv_applyforest_covertitle"
            style="?android:attr/borderlessButtonStyle" />

        <EditText
            android:id="@+id/et_applyforest_name"
            android:layout_width="@dimen/dp_331"
            android:layout_height="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@null"
            android:hint="@string/page2_applyforest_4"
            android:textColorHint="@color/GrayScale_80"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_applyforest_nametitle" />


        <EditText
            android:id="@+id/et_applyforest_introduce"
            android:layout_width="@dimen/dp_331"
            android:layout_height="@dimen/dp_21"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@null"
            android:hint="@string/page2_applyforest_6"
            android:textColor="@color/GrayScale_20"
            android:textColorHint="@color/GrayScale_80"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_applyforest_introducetitle"
            app:layout_constraintTop_toBottomOf="@+id/tv_applyforest_introducetitle" />

        <ImageButton
            android:id="@+id/btn_applyforest_addicon"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/add_photo_gray"
            android:scaleType="center"
            android:src="@mipmap/vector_2"
            app:layout_constraintStart_toStartOf="@+id/tv_applyforest_icontitle"
            app:layout_constraintTop_toBottomOf="@+id/tv_applyforest_icontitle" />

        <TextView
            android:id="@+id/tv_applyforest_line3"
            android:layout_width="@dimen/dp_331"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/HH_BandColor_1"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_applyforest_introduce" />

        <TextView
            android:id="@+id/btn_applyforest_line1"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_10"
            android:background="@drawable/block_line_2"
            app:layout_constraintBottom_toBottomOf="@+id/tv_applyforest_title"
            app:layout_constraintEnd_toEndOf="@+id/tv_applyforest_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_applyforest_title"
            app:layout_constraintTop_toTopOf="@+id/tv_applyforest_title"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/tv_applyforest_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/page2_applyforest_1"
            android:textColor="@color/GrayScale_0"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <TextView
            android:id="@+id/tv_applyforest_content"
            android:layout_width="@dimen/dp_331"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/page2_applyforest_2"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_applyforest_line1" />

        <TextView
            android:id="@+id/tv_applyforest_nametitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/page2_applyforest_3"
            android:textColor="@color/GrayScale_20"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_applyforest_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_applyforest_content" />

        <TextView
            android:id="@+id/tv_applyforest_line2"
            android:layout_width="@dimen/dp_331"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/HH_BandColor_1"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/et_applyforest_name"
            app:layout_constraintStart_toStartOf="@+id/et_applyforest_name"
            app:layout_constraintTop_toBottomOf="@+id/et_applyforest_name" />

        <TextView
            android:id="@+id/tv_applyforest_warnname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/page2_applyforest_5"
            android:textColor="@color/HH_Reminder_Warning"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/tv_applyforest_line2"
            app:layout_constraintTop_toBottomOf="@+id/tv_applyforest_line2" />

        <TextView
            android:id="@+id/tv_applyforest_introducetitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/page2_applyforest_6"
            android:textColor="@color/GrayScale_20"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_applyforest_warnname"
            app:layout_constraintTop_toBottomOf="@+id/tv_applyforest_warnname" />

        <TextView
            android:id="@+id/tv_applyforest_explain"
            android:layout_width="@dimen/dp_331"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/page2_applyforest_8"
            android:textColor="@color/GrayScale_50"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/et_applyforest_introduce"
            app:layout_constraintStart_toStartOf="@+id/tv_applyforest_line3"
            app:layout_constraintTop_toBottomOf="@+id/tv_applyforest_line3" />

        <TextView
            android:id="@+id/tv_applyforest_warnintroduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/page2_applyforest_9"
            android:textColor="@color/HH_Reminder_Warning"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/tv_applyforest_explain"
            app:layout_constraintTop_toBottomOf="@+id/tv_applyforest_explain" />

        <TextView
            android:id="@+id/tv_applyforest_icontitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/page2_applyforest_10"
            android:textColor="@color/GrayScale_20"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_applyforest_warnintroduce"
            app:layout_constraintTop_toBottomOf="@+id/tv_applyforest_warnintroduce" />

        <TextView
            android:id="@+id/tv_applyforest_covertitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/page2_applyforest_11"
            android:textColor="@color/GrayScale_20"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_applyforest_icontitle"
            app:layout_constraintStart_toEndOf="@+id/tv_applyforest_icontitle"
            app:layout_constraintTop_toTopOf="@+id/tv_applyforest_icontitle" />

        <include
            layout="@layout/titlebar_centergreen"
            android:id="@+id/include"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>